add logic and styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="assets/scss/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel='icon' href='favicon.ico' type='image/x-icon'/>
 </head>
 <body>
 
@@ -58,6 +59,7 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script src="assets/script/main.js">
+
 
 </script>
 
